Adding name and changing some input fields.

--- a/web/src/pages/AddRestaurent/AddRestaurent.html
+++ b/web/src/pages/AddRestaurent/AddRestaurent.html
@@ -66,14 +66,14 @@
                     <span>Restaurant Menu Image</span>
                 </div>
                 <div class="input_container">
-                    <input type="file" name="fssai_license_image" class="input" required>
-                    <label for="fssai_license_image">Upload FSSAI License Image</label>
-                    <span>FSSAI License Image</span>
+                    <input type="text" name="fssai_license_image" class="input" required>
+                    <label for="fssai_license_image">Enter FSSAI License Number</label>
+                    <span>FSSAI License Number</span>
                 </div>
                 <div class="input_container">
-                    <input type="file" name="pan_card_image" class="input" required>
-                    <label for="pan_card_image">Upload PAN Card Image</label>
-                    <span>PAN Card Image</span>
+                    <input type="text" name="pan_card_image" class="input" required>
+                    <label for="pan_card_image">Enter PAN Card Number</label>
+                    <span>PAN Card Number</span>
                 </div>
                 <div class="input_container">
                     <input type="password" name="password" class="input" required>
