--- a/web/src/pages/AddRestaurent/AddRestaurent.html
+++ b/web/src/pages/AddRestaurent/AddRestaurent.html
@@ -80,6 +80,11 @@
                     <label for="password">Password</label>
                     <span>Password</span>
                 </div>
+                <div class="input_container">
+                    <input type="password" name="re_password" class="input" required>
+                    <label for="re_password">Re-enter Password</label>
+                    <span>Re-enter Password</span>
+                </div>
                 <div class="remember-forgot">
                     <label><input type="checkbox" required>I agree to Platera's <b><span style="color: red;">Terms of Service</span></b> & <b><span style="color: red;">Conditions</span></b></label>
                 </div>
