--- a/web/src/pages/AddRestaurent/AddRestaurent.html
+++ b/web/src/pages/AddRestaurent/AddRestaurent.html
@@ -61,18 +61,18 @@
                     <span>Regular GSTIN Number</span>
                 </div>
                 <div class="input_container">
-                    <input type="file" name="restaurant_menu_image" class="input" required>
-                    <label for="restaurant_menu_image">Upload Restaurant Menu Image</label>
-                    <span>Restaurant Menu Image</span>
+                    <input type="text" name="address" class="input" required>
+                    <label for="address">Address</label>
+                    <span>Address</span>
                 </div>
                 <div class="input_container">
-                    <input type="text" name="fssai_license_image" class="input" required>
-                    <label for="fssai_license_image">Enter FSSAI License Number</label>
+                    <input type="text" name="fssai_license" class="input" required>
+                    <label for="fssai_license">Enter FSSAI License Number</label>
                     <span>FSSAI License Number</span>
                 </div>
                 <div class="input_container">
-                    <input type="text" name="pan_card_image" class="input" required>
-                    <label for="pan_card_image">Enter PAN Card Number</label>
+                    <input type="text" name="pan_card" class="input" required>
+                    <label for="pan_card">Enter PAN Card Number</label>
                     <span>PAN Card Number</span>
                 </div>
                 <div class="input_container">
