--- a/web/src/pages/AddRestaurent/AddRestaurent.html
+++ b/web/src/pages/AddRestaurent/AddRestaurent.html
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="close-btn"><ion-icon name="close-outline" class="ico"></ion-icon></div>
             <h1>Restaurant Registration</h1>
-            <form action="#" method="POST" id="restaurantRegistrationForm" class="contact_form" enctype="multipart/form-data">
+            <form action="http://localhost:8080/Platera-Main/restaurant_sign_up" method="POST" id="restaurantRegistrationForm" class="contact_form" enctype="multipart/form-data">
                 <div class="input_container">
                     <input type="text" name="restaurant_name" class="input" required>
                     <label for="restaurant_name">Restaurant Name</label>
