--- a/web/src/pages/Delivery Executive/DeliveryExecutiveRegisterForm.html
+++ b/web/src/pages/Delivery Executive/DeliveryExecutiveRegisterForm.html
@@ -40,8 +40,8 @@
         <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" required>
 
         <!-- Image Upload -->
-        <label for="image">Upload Image:</label>
-        <input type="file" id="image" name="image" accept="image/*" required>
+        <!-- <label for="image">Upload Image:</label>
+        <input type="file" id="image" name="image" accept="image/*" required> -->
 
         <!-- Aadhar -->
         <label for="aadhar">Aadhar Number:</label>
