Major changes in AddDeliveryExecutive.html file

--- a/web/index.html
+++ b/web/index.html
@@ -12,26 +12,26 @@
 <body>
 
     <!-- Loader -->
-    <!-- <div class="loader">
+    <div class="loader">
     <div id="pl">
       <div>
         <video class="vid" src="src/pages/ContactUs/Assets/loader.mp4" autoplay muted loop></video>
       </div>
     </div>
-    </div> -->
+    </div>
     <!-- Header section -->
 
     <header>
         <div class="nav_bar">
             <div class="logo">
-                <img src="./Public/images/logo.png" alt="logo" height="70px">
+                <img src="./Public/images/PlateraLogo-red.png" alt="logo">
             </div>
             <div class="nav_links">
                 <ul class="nav_list">
                     <!-- <li><a href="./index.html">Home</a></li> -->
                     <!-- <li><a href="./src/pages/Menu/menu.html">Menu</a></li> -->
-                    <li><a href="src/pages/AddRestaurent/AddRestaurent.html">Add Restaurant</a></li>
-                    <li><a href="src/pages/Delivery Executive/DeliveryExecutiveRegisterForm.html">Delivery Executive</a></li>
+                    <li><a href="./src/pages/AddRestaurent/AddRestaurent.html">Add Restaurant</a></li>
+                    <li><a href="./src/pages/AddDeliveryExecutive/AddDeliveryExecutive.html">Delivery Executive</a></li>
                     <li><a href="src/pages/ContactUs/ContactUs.html">Contact Us</a></li>
                     <li><a href="src/pages/Admin/Admin_Order_Management.html">Admin Dashboard</a></li>
                     <!-- The above li had id="secret-admin-link" and style="display: none;" -->
@@ -279,9 +279,8 @@
         <div class="container_footer">
             <div class="row">
                 <div class="col">
-                    <img src="./Public/images/logo.png" alt="">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam at nisi veniam voluptatem eveniet obcaecati, modi itaque inventore. Nulla laudantium totam, enim autem aut harum.</p>
-                </div>
+                    <img src="./Public/images/PlateraLogo-red.png" alt="">
+                    <p>Platera delivers delicious meals from your favorite local restaurants straight to your door, combining speed and convenience with every order. From quick bites to gourmet dishes, enjoy a world of flavors anytime, anywhere!</p>
                 <div class="col">
                     <h3>Office <div class="underline"><span></span></div></h3>
                     <p>ITFL Road</p>
@@ -293,10 +292,10 @@
                 <div class="col">
                     <h3>Links <div class="underline"><span></span></div></h3>
                     <ul>
-                        <li><a href="#">Terms & Conditions</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Help</a></li>
-                        <li><a href="#">FAQ</a></li>
+                        <li><a href="./src/pages/FooterLinkPages/Terms&Conditions/Terms&Conditions.html">Terms & Conditions</a></li>
+                        <li><a href="./src/pages/FooterLinkPages/PrivacyPolicy/PrivacyPolicy.html">Privacy Policy</a></li>
+                        <li><a href="./src/pages/FooterLinkPages/Help/Help.html">Help</a></li>
+                        <!-- <li><a href="#">FAQ</a></li> -->
                     </ul>
                 </div>
                 <div class="col">
