Minor issue solved in index and sign in servlet

--- a/web/index.html
+++ b/web/index.html
@@ -28,10 +28,10 @@
             </div>
             <div class="nav_links">
                 <ul class="nav_list">
-                    <!-- <li><a href="./index.html">Home</a></li> -->
-                    <!-- <li><a href="./src/pages/Menu/menu.html">Menu</a></li> -->
-                    <li><a href="./src/pages/AddRestaurent/AddRestaurent.html">Add Restaurant</a></li>
-                    <li><a href="./src/pages/AddDeliveryExecutive/AddDeliveryExecutive.html">Delivery Executive</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./src/pages/Menu/menu.html">Menu</a></li>
+                    <li><a href="src/pages/AddRestaurent/AddRestaurent.html">Add Restaurant</a></li>
+                    <li><a href="src/pages/DeliveryExecutive/DeliveryExecutiveRegisterForm.html">Delivery Executive</a></li>
                     <li><a href="src/pages/ContactUs/ContactUs.html">Contact Us</a></li>
                     <li><a href="src/pages/Admin/Admin_Order_Management.html">Admin Dashboard</a></li>
                     <!-- The above li had id="secret-admin-link" and style="display: none;" -->
