Minor changes in restaurant public info

--- a/web/src/pages/AddRestaurent/Restaurant_public_info/Restaurant_public_info.html
+++ b/web/src/pages/AddRestaurent/Restaurant_public_info/Restaurant_public_info.html
@@ -6,7 +6,7 @@
     <title>Restaurent Details | Platera</title>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="./afterSigningUp.css">
+    <link rel="stylesheet" href="./Restaurant_public_info.css">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -118,6 +118,6 @@
     </div>
   
   
-  <script src="script.js"></script>
+  <script src="./afterSigningUp.js"></script>
 </body>
 </html>
