--- a/web/src/pages/AddDeliveryExecutive/AddDeliveryExecutive.html
+++ b/web/src/pages/AddDeliveryExecutive/AddDeliveryExecutive.html
@@ -51,8 +51,12 @@
                     <span>Age</span>
                 </div>
                 <div class="input_container" id="gender">
-                    <input type="text" name="gender" class="input" required>
-                    <label for="gender">Gender</label>
+                    <select name="gender" class="input" required>
+                        <option value="" disabled selected>Select Gender</option>
+                        <option value="Male">Male</option>
+                        <option value="Female">Female</option>
+                        <option value="Others">Others</option>
+                    </select>
                     <span>Gender</span>
                 </div>
                 <div class="input_container">
