Stored category Images

--- a/web/index.html
+++ b/web/index.html
@@ -89,7 +89,7 @@
 
                             <div class="remember-forgot">
                                 <label><input type="checkbox">Remember me</label>
-                                <a href="#">Forgot password?</a>
+                                <a href="src/pages/ForgotPassword/ForgotPassword.jsp">Forgot password?</a>
                             </div>
 
                             <button type="submit" class="btn">Sign In</button>
