--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,7 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./src/pages/Menu/menu.html">Menu</a></li>
                     <li><a href="src/pages/AddRestaurant/AddRestaurant.html">Add Restaurant</a></li>
-                    <li><a href="src/pages/AddDeliveryExecutive/AddDeliveryExecutive.html">Delivery Executive</a></li>
+                    <li><a href="src/pages/AddDeliveryExecutive/AddDeliveryExecutive.jsp">Delivery Executive</a></li>
                     <li><a href="src/pages/ContactUs/ContactUs.html">Contact Us</a></li>
                     <li><a href="src/pages/Admin/Admin_Order_Management.jsp">Admin Dashboard</a></li>
                     <!-- The above li had id="secret-admin-link" and style="display: none;" -->
