Made Changes in Customer Dashboard

--- a/web/src/pages/Customer_Dashboard/Customer_Dashboard Home page.html
+++ b/web/src/pages/Customer_Dashboard/Customer_Dashboard Home page.html
@@ -51,7 +51,7 @@
                                     <td class="address"><i class="fas fa-map-marker-alt"></i> Elm Street, 23 Yogyakarta</td>
                                     <td class="total"><span>$ 5.59</span></td>
                                     <td class="payment-method">Cash</td>
-                                    <td><i class="fas fa-chevron-down dropdown"></i></td>
+                                    <td class="arrow"><i class="fas fa-chevron-down dropdown"></i></td>
                                 </tr>
                                 <tr class="details-row">
                                     <td colspan="7">
@@ -69,16 +69,21 @@
                                             </div>
                                             <div class="order-summary">
                                                 <div class="order-summary-details">
+                                                    <span>
                                                     <h4>Status</h4>
                                                     <p>Completed</p>
+                                                    </span>
+                                                    <span>
                                                     <h4>Date</h4>
-                                                    <p>June 1, 2020</p>
+                                                    <p>June 1, 2020</p></span>
                                                 </div>
                                                 <div class="order-summary-details">
+                                                    <span>
                                                     <h4>Bills</h4>
-                                                    <p>Order #1</p>
+                                                    <p>Order #1</p></span>
+                                                    <span>
                                                     <h4>Date Paid</h4>
-                                                    <p>June 1, 2020</p>
+                                                    <p>June 1, 2020</p></span>
                                                 </div>
                                             </div>
                                             <div class="order-amt">
