--- a/web/src/pages/Customer_Dashboard/Customer_Dashboard Settings.html
+++ b/web/src/pages/Customer_Dashboard/Customer_Dashboard Settings.html
@@ -62,24 +62,30 @@
                             </div>
                             <form class="account-form">
                                 <div class="form-row">
+                                  <div class="form-col">
                                     <label>Username</label>
                                     <input type="text" value="Jordan Nico" />
+                                  </div>
+                                  <div class="form-col">
                                     <label>Phone</label>
                                     <input type="tel" value="+123456789" />
+                                  </div>
                                 </div>
                                 <div class="form-row">
+                                  <div class="form-col">
                                     <label>Email</label>
                                     <input type="email" value="ordanico@mail.com" />
+                                  </div>
+                                  <div class="form-col">
                                     <label>Password</label>
                                     <input type="password" value="********" />
+                                  </div>
                                 </div>
                                 <div class="form-row">
+                                  <div class="form-col">
                                     <label>Address Details</label>
-                                    <textarea readonly>
-            Franklin Avenue Street
-            New York, ABC 5562
-            United States
-                                    </textarea>
+                                    <textarea>Franklin Avenue Street New York, ABC 5562 United States</textarea>
+                                  </div>
                                 </div>
                                 <button type="submit" class="btn save-settings">Save Setting</button>
                             </form>
