--- a/web/src/pages/Customer_Dashboard/Customer_Order.html
+++ b/web/src/pages/Customer_Dashboard/Customer_Order.html
@@ -11,21 +11,58 @@
     <body>
         <div class="dashboard-container">
             <aside class="sidebar">
-                <h2>Arjun Das</h2>
-                <ul>
-                    <li><a href="#Cart">Cart</a></li>
-                    <li><a href="#reorder">Reorder</a></li>
-                    <li><a href="#membership">Membership</a></li>
-                    <li><a href="#payments">Payments</a></li>
-                    <li><a href="Customer_Dashboard Settings.html">Settings</a></li>
-                </ul>
-            </aside>
-            <main class="main-content">
-                <div class="profile-header">
-                    <h1>Welcome, Arjun!</h1>
-                    <button>Edit Profile</button>
+                <div class="sidebar-toggle menu" id="menu">
+                    <ion-icon name="menu"></ion-icon>
                 </div>
+                <div class="sidebar-toggle close-btn">
+                    <ion-icon name="close-outline" class="ico"></ion-icon>
+                </div>
+                <div class="sidebar-header">
+                    <div class="logo">
+                        <img src="../../../Public/images/logo.png" alt="Logo">
+                    </div>
+                </div>
+                <div class="sidebar-menu">
+                    <ul>
+                        <li>
+                            <a href="Customer_Cart.html">
+                                <span class="icon"><ion-icon name="cart"></ion-icon></span>
+                                <span>Cart</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span class="icon"><ion-icon name="bag-outline"></ion-icon></span>
+                                <span>Orders</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#membership">
+                                <span class="icon"><ion-icon name="card"></ion-icon></span>
+                                <span>Membership</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="Customer_Settings.html">
+                                <span class="icon"><ion-icon name="settings"></ion-icon></span>
+                                <span>Settings</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </aside>
 
+            <div class="content">
+            <div class="profile-header">
+                <div class="headerLogo">
+                    <div class="logo">
+                        <img src="../../../Public/images/logo.png" alt="Logo">
+                    </div>
+                </div>
+                <h1>Welcome, Arjun!</h1>
+                <button class="edit_btn">Edit Profile</button>
+            </div>
+            <main class="main-content">
                 <section class="dashboard-section" id="orders">
                     <h2>Your Orders</h2>
 
@@ -134,6 +171,7 @@
                     </div>
                 </section> -->
             </main>
+        </div>
         </div>
         <script src="script.js"></script>
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
